# bittok-core

./: .gitignore  README.md  docker-compose.yml  start.sh
.github/workflows/: build_and_publish-iris.yml  build_and_publish-ivy.yml
docker/: Dockerfile
modules/claims/: Cargo.toml
modules/claims/src/: ethereum_address.rs  lib.rs  mock.rs  tests.rs
modules/evm-accounts/: Cargo.toml
modules/evm-accounts/src/: lib.rs
modules/incentives/: Cargo.toml
modules/incentives/src/: lib.rs
modules/reward-pool/: Cargo.toml
modules/reward-pool/src/: lib.rs  mock.rs  tests.rs
modules/traits/: Cargo.toml
modules/type-utils/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/runtime-api/: Cargo.toml
rpc/src/: balance.rs  currency.rs  exchange.rs  incentive_pool.rs  pair.rs
runtime/: Cargo.toml
runtime/src/: bittok_evm_config.rs  impls.rs  lib.rs  mock.rs  tests.rs
tests/evm_test/: run.sh
