[package]
name = 'bittok'
authors = ['Bittok Network <https://github.com/bittok-project>']
build = 'build.rs'
description = 'Bittok node'
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://www.bittok.com'
repository = 'https://github.com/bittok-project/bittok-core'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'bittok'

[dependencies]
primitives = { package = 'bittok-primitives', path = '../primitives', version = '0.9.0'}
bittok-runtime = {path = '../runtime', version = '0.9.0' }
bittok-rpc = {default-features = false, version = '0.9.0', package = 'bittok-rpc', path = '../rpc' }
futures = { version = "0.3.9", features = ["compat"] }

jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
structopt = { version = '0.3.8', optional = true }
serde_json = "1.0"

pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-cli = { features = ["wasmtime"], optional = true, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-executor = {features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-network = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-service = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-consensus = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-core = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-keystore = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate.git", tag = "v3.0.0", optional = true }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"   }
hex-literal = { version = '0.3.1' }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
pallet-evm = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok"  }
pallet-ethereum = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
fc-rpc = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok", features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
fc-consensus = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
fp-consensus = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
fc-db = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
fc-rpc-core = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
fc-mapping-sync = { git = "https://github.com/bittok-project/frontier.git", tag = "v0.1.4-bittok" }
primitive-types = { version = "0.9", default-features = false, features = ["rlp", "byteorder"] }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0" }

[features]
default = [ "cli" ]

cli = [
    "wasmi-errno",
    "sc-cli",
    "sc-finality-grandpa-warp-sync",
    "sc-service/db",
    "structopt",
]

wasmtime = [
    "sc-executor/wasmtime",
]

wasmi-errno = [
    "sc-executor/wasmi-errno",
]
