[package]
name = "bittok-rpc-runtime-api"
authors = ['Bittok Network <https://github.com/bittok-project>']
edition = "2018"
license = 'GPL-3.0'
homepage = 'https://bittok.finance'
repository = 'https://github.com/bittok-project/bittok-core'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
primitives = { default-features = false, package = 'bittok-primitives', path = '../../primitives', version = '0.9.0'}
sp-api = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }


[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]
